ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
    ingress.kubernetes.io/rewrite-target: "/"
  name: example-public
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: example-web-public
          servicePort: 80
